Use valueOf().  It's up to 3.5x faster on Java 1.5+
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/freenet@26999 67a373e5-eb02-0410-a15c-ee090a768436